添加了邮件收发

--- a/EngineerModules/src/main/resources/local.conf
+++ b/EngineerModules/src/main/resources/local.conf
@@ -5,6 +5,11 @@ zkServer {
     port = 2181
 }
 
+mailServer{
+    host = ""
+    port = 110
+}
+
 userAuth {
     name = "userAuth"
     host = "localhost"
