重构了项目

--- a/EngineerModules/src/main/resources/local.conf
+++ b/EngineerModules/src/main/resources/local.conf
@@ -6,15 +6,15 @@ zkServer {
 }
 
 mailServer{
-    host = ""
-    port = 110
+    name = "mailServer"
+    host = "localhost"
+    port = 50030
 }
 
 userAuth {
     name = "userAuth"
     host = "localhost"
     port = 50010
-    path = []
 }
 
 tempNote {
